Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!

2.5.0.2500
----------
- Added support for plugins.
- Added "Share With Facebook" button.
- Added "Share With Evernote" button.
- Added "Share With Twitter" button.
- Added user contributed "Share with Delicious" plugin to the core distribution. Thanks to forum user czanderna.
- Update to the current version of Sparkle, which prevents auto-updating to a version of Vienna which will not run on the user's system.
- Fix bug where deleting a feed in Unified view mode would cause Vienna to stop working correctly.
- Fix bug where changing the article font size would crash Vienna.

2.4.0.2401
----------
- Fix the filter field article selection problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&t=21665
- Enable navigating the built-in browser's back/forward-list via  left/right three-finger swipes.
- Enable navigating feeds via left/right three-finger swipes: Left for "Go Back" and right for "View Next Unread".
- Enable as scrolling to the top/bottom of web pages and the article list via upwards/downwards three-finger swipes.
- Change "currentSelection" to "currentTextSelection" in Viennas Applescript terminology.

2.4.0.2400
----------
- Remove command-shift-g as keyboard shortcut for creating group folder. This is now used for Find Previous.
- Show an alert when upgrading the database version, because it can take a while.
- Turn off animation of tab resizing. It was slow, superfluous and apparently sometimes caused drawing errors in the tab bar background.
- Fix crash when sorting articles by enclosure URL.
- Update SQLite to version 3.6.18.
- Add ability to "Show XML Source" for feeds, which is now cached locally.
- Add support for IDN (internationlized domain names) in the browser.