@@ -10,14 +10,20 @@ Thanks!
 
 2.5.0.2500
 ----------
+- User Interface refresh: Removed the grey headers, made the vertical divider easier to grab and made filtering more discoverable.
 - Added support for plugins.
+- Added support for search engine plugins.
+- Added support for blog editor plugins.
+- Added support for sharing plugins that work like bookmarklets for social websites.
 - Added "Share With Facebook" button.
 - Added "Share With Evernote" button.
-- Added "Share With Twitter" button.
+- Added "Share With Twitter" button with automatic URL shortening via bit.ly.
 - Added user contributed "Share with Delicious" plugin to the core distribution. Thanks to forum user czanderna.
 - Update to the current version of Sparkle, which prevents auto-updating to a version of Vienna which will not run on the user's system.
 - Fix bug where deleting a feed in Unified view mode would cause Vienna to stop working correctly.
 - Fix bug where changing the article font size would crash Vienna.
+- Fix bug that caused zombiefied update spinners (thanks to Curtis Faith).
+- Fix bug that caused the reading position to be lost upon refresh (thanks to Curtis Faith).
 
 2.4.0.2401
 ----------
